@@ -18,10 +18,11 @@ public class MarkdownParseTest {
     }
     
     @Test
-    public void testLink() {
-        String[] links = {"https://something.com","some-page.html"};
-        List<String> Array4 = Arrays.asList("http:…");
-        assertSame(links, MarkdownParse.getLinks(Files.readString(Path.of("test-file.md"))));
+    public void testLink() throws IOException {
+        String regFile = Files.readString(Path.of("./test-file.md"));
+        String[] regLines = regFile.split("\n");
+        assertEquals(List.of("https://something.com","some-page.html"), MarkdownParse.getLinks(regLines)); }
+    
     }
 
-    }
+
